Fix background img path + static folder

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,7 +2,7 @@
 @import ../node_modules/bulma/sass/utilities/functions
 
 .hero
-  background-image: url('../public/img/hero.jpg')
+  background-image: url('../img/hero.jpg')
   background-position: center center
   -webkit-background-size: cover
   background-size: cover
