--- a/views/index.twig
+++ b/views/index.twig
@@ -25,7 +25,7 @@
             <div class="hero-head"></div>
             <div clasS="hero-body"></div>
             <div class="hero-foot">
-                <nav class="tabs">
+                <nav class="tabs is-centered">
                     <div class="container">
                         <ul>
                             <li><a>API Doc</a></li>
