--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -28,7 +28,7 @@
                 <nav class="tabs is-centered">
                     <div class="container">
                         <ul>
-                            <li><a>API Doc</a></li>
+                            <li><a href="/doc">API Doc</a></li>
                         </ul>
                     </div>
                 </nav>
